[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-metrics"
version = "1.0.0"
description = "Private, offline analytics for your GitHub repos. Process data exports locally."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Ghost Metrics Contributors"}]
keywords = ["git", "analytics", "metrics", "offline", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
ghost-metrics = "ghost_metrics.cli:cli"

[project.urls]
Homepage = "https://github.com/ghost-metrics/ghost-metrics"
Issues = "https://github.com/ghost-metrics/ghost-metrics/issues"
